# openfunny

./: .gitignore  LICENSE  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/opfromthestart/openfunny/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/opfromthestart/openfunny/: Backend.kt  MainActivity.kt  Scraper.kt
app/src/main/java/com/github/opfromthestart/openfunny/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/github/opfromthestart/openfunny/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
