[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
json = "0.12.4"
reqwest = {version = "0.11.16", features = ["blocking", "native-tls-vendored"]}
scraper = "0.17.1"
serde = { version = "1.0.160", features = ["serde_derive"] }
once_cell = "1.18.0"
serde_json = "1.0.104"

[lib]
crate_type = ["staticlib","dylib"]
